--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Popov Tihomir",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^6.2.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-lodash-fp": "^2.2.0-a1",
@@ -29,6 +30,7 @@
     "lint-staged": "^11.1.2",
     "prettier": "^2.3.2",
     "source-map-loader": "^3.0.0",
+    "style-loader": "^3.2.1",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
